# d2

./: .gitignore  .windsurfrules  AGENTS.md  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .env.example  README.md  pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/routes/: chat.py  fit.py  health.py  profile.py  sample_tenders.py  suggestions.py
apps/api/app/core/: config.py  logging.py  startup.py  writing_style.json
apps/api/app/data/: achievements.json  buyer_roles.json  capabilities.json  compliance_rules.json  david_cv.json  evidence_categories.json  experience.json  faqs  faqs.json  frameworks.json  job_titles.json  procurement_examples.json  product.json  profile.json  projects.json  proof_points.json  scoring_rules.json  skills.json  tenders.json  workflows.json
apps/api/app/data/sample_tenders/: clear_strong_opportunity.txt  poor_fit_cautious_no_bid.txt  (+1 more)
apps/api/app/models/: chat.py  fit.py  profile.py  suggestion.py  tender.py
apps/api/app/services/: answer_builder.py  bid_readiness.py  classifier.py  fit_analyser.py  question_intent.py  response_style.py  retriever.py  sample_tenders.py  stream_writer.py  tender_parser.py
apps/api/app/tests/: test_answer_builder.py  test_bid_readiness.py  test_chat_route.py  test_classifier.py  test_config.py  test_fit_analyser.py  test_opening_lines.py  test_question_intent.py  test_response_style.py  test_retriever.py  test_sample_tenders.py  test_sample_tenders_route.py  test_startup_checks.py  test_streaming.py  test_tender_parser.py
(+41 files in other folders)
